Change Something to Say Blue Shield

--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
                                                     <img src="img/avatar2.png" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
-                                                    Sales Department
+                                                    Blue Shield
                                                     <small><i class="fa fa-clock-o"></i> Yesterday</small>
                                                 </h4>
                                                 <p>We have a new group customer!</p>
