--- a/public/helm.html
+++ b/public/helm.html
@@ -354,7 +354,7 @@
                         </li>
                         <li>
                             <a href="pages/register.html">
-                                <i class="fa fa-envelope"></i> <span>Register</span>
+                                <i class="fa fa-heart"></i> <span>Register</span>
                                 <small class="badge pull-right bg-yellow">12</small>
                             </a>
                         </li>
