--- a/public/pages/examples/login.html
+++ b/public/pages/examples/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="bg-black">
+<html class="login">
     <head>
         <meta charset="UTF-8">
         <title>AdminLTE | Log in</title>
@@ -18,11 +18,11 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body class="bg-black">
+    <body class="login">
 
         <div class="form-box" id="login-box">
             <div class="header">Sign In</div>
-            <form action="../../index.html" method="post">
+            <form action="../../dashboard.html" method="post">
                 <div class="body bg-gray">
                     <div class="form-group">
                         <input type="text" name="userid" class="form-control" placeholder="User ID"/>
