--- a/public/pages/examples/register.html
+++ b/public/pages/examples/register.html
@@ -18,11 +18,11 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body class="bg-black">
+    <body class="register">
 
         <div class="form-box" id="login-box">
             <div class="header">Register New Membership</div>
-            <form action="../../index.html" method="post">
+            <form action="../../user.html" method="post">
                 <div class="body bg-gray">
                     <div class="form-group">
                         <input type="text" name="name" class="form-control" placeholder="Full name"/>
