changed jane to john for main dashboard

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -62,7 +62,7 @@
                                         <li><!-- start message -->
                                             <a href="#">
                                                 <div class="pull-left">
-                                                    <img src="img/avatar3.png" class="img-circle" alt="User Image"/>
+                                                    <img src="img/avatar5.png" class="img-circle" alt="User Image"/>
                                                 </div>
                                                 <h4>
                                                     Support Team
@@ -240,14 +240,14 @@
                         <li class="dropdown user user-menu">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="glyphicon glyphicon-user"></i>
-                                <span>Jane Doe <i class="caret"></i></span>
+                                <span>John Doe <i class="caret"></i></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <!-- User image -->
                                 <li class="user-header bg-light-blue">
-                                    <img src="img/avatar3.png" class="img-circle" alt="User Image" />
+                                    <img src="img/avatar5.png" class="img-circle" alt="User Image" />
                                     <p>
-                                        Jane Doe - Insurance Broker
+                                        John Doe - Insurance Broker
                                         <small>Member since April. 2014</small>
                                     </p>
                                 </li>
@@ -286,10 +286,10 @@
                     <!-- Sidebar user panel -->
                     <div class="user-panel">
                         <div class="pull-left image">
-                            <img src="img/avatar3.png" class="img-circle" alt="User Image" />
+                            <img src="img/avatar5.png" class="img-circle" alt="User Image" />
                         </div>
                         <div class="pull-left info">
-                            <p>Hello, Jane</p>
+                            <p>Hello, John</p>
 
                             <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                         </div>
@@ -793,7 +793,7 @@
                                         <p class="message">
                                             <a href="#" class="name">
                                                 <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:15</small>
-                                                Jane Doe
+                                                John Doe
                                             </a>
                                             See the attached document for the current rates.
                                         </p>
@@ -809,7 +809,7 @@
                                     </div><!-- /.item -->
                                     <!-- chat item -->
                                     <div class="item">
-                                        <img src="img/avatar3.png" alt="user image" class="offline"/>
+                                        <img src="img/avatar5.png" alt="user image" class="offline"/>
                                         <p class="message">
                                             <a href="#" class="name">
                                                 <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> 5:30</small>
