--- a/public/helm.html
+++ b/public/helm.html
@@ -55,7 +55,7 @@
                                 <span class="label label-success">4</span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li class="header">You have 4 messages</li>
+                                <li class="header">You have 12 messages</li>
                                 <li>
                                     <!-- inner menu: contains the actual data -->
                                     <ul class="menu">
@@ -101,7 +101,7 @@
                                                     <img src="img/avatar2.png" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
-                                                    Blue Shield
+                                                    Sales Department
                                                     <small><i class="fa fa-clock-o"></i> Yesterday</small>
                                                 </h4>
                                                 <p>We have a new group customer!</p>
@@ -137,17 +137,17 @@
                                     <ul class="menu">
                                         <li>
                                             <a href="#">
-                                                <i class="ion ion-ios7-people info"></i> 5 new members joined today
+                                                <i class="ion ion-ios7-people info"></i> 5 new members joined SFAF today
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <i class="fa fa-warning danger"></i> 3 members were denied coverage
+                                                <i class="fa fa-warning danger"></i> 2 USF members were denied coverage
                                             </a>
                                         </li>
                                         <li>
                                             <a href="#">
-                                                <i class="fa fa-users warning"></i> 5 new members joined
+                                                <i class="fa fa-users warning"></i> 2 new members joined Tesla
                                             </a>
                                         </li>
 
@@ -180,7 +180,7 @@
                                         <li><!-- Task item -->
                                             <a href="#">
                                                 <h3>
-                                                    Complete VSP Registration Process
+                                                    3 Members with incomplete VSP Registration Process
                                                     <small class="pull-right">20%</small>
                                                 </h3>
                                                 <div class="progress xs">
@@ -248,19 +248,19 @@
                                     <img src="img/avatar3.png" class="img-circle" alt="User Image" />
                                     <p>
                                         John Doe - Insurance Broker
-                                        <small>Member since April. 2014</small>
+                                        <small>Member since August. 2014</small>
                                     </p>
                                 </li>
                                 <!-- Menu Body -->
                                 <li class="user-body">
                                     <div class="col-xs-4 text-center">
+                                        <a href="#">Groups</a>
+                                    </div>
+                                    <div class="col-xs-4 text-center">
                                         <a href="#">Leads</a>
                                     </div>
                                     <div class="col-xs-4 text-center">
                                         <a href="#">Sales</a>
-                                    </div>
-                                    <div class="col-xs-4 text-center">
-                                        <a href="#">Customers</a>
                                     </div>
                                 </li>
                                 <!-- Menu Footer-->
@@ -323,7 +323,7 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="pages/charts/morris.html"><i class="fa fa-angle-double-right"></i> Aetna</a></li>
+                                <li><a href="pages/charts/morris.html"><i class="fa fa-angle-double-right"></i> Blue Shield</a></li>
                                 <li><a href="pages/charts/flot.html"><i class="fa fa-angle-double-right"></i> VSP</a></li>
                                 <li><a href="pages/charts/inline.html"><i class="fa fa-angle-double-right"></i> Delta Dental</a></li>
                             </ul>
@@ -335,9 +335,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="pages/charts/morris.html"><i class="fa fa-angle-double-right"></i> Individual Products</a></li>
-                                <li><a href="pages/charts/flot.html"><i class="fa fa-angle-double-right"></i> Small Group Products</a></li>
-                                <li><a href="pages/charts/inline.html"><i class="fa fa-angle-double-right"></i> Large Group Products</a></li>
+                                <li><a href="pages/charts/morris.html"><i class="fa fa-angle-double-right"></i> Small Group</a></li>
+                             Products    <li><a href="pages/charts/flot.html"><i class="fa fa-angle-double-right"></i> Large Group Products</a></li>
+                                <li><a href="pages/charts/inline.html"><i class="fa fa-angle-double-right"></i> Large Individual Products</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -354,7 +354,7 @@
                         </li>
                         <li>
                             <a href="pages/register.html">
-                                <i class="fa fa-envelope"></i> <span>Register</span>
+                                <i class="fa fa-heart"></i> <span>Register</span>
                                 <small class="badge pull-right bg-yellow">12</small>
                             </a>
                         </li>
