linked all forms for login/lgout/change user and linked new registrartion to online form

--- a/public/pages/forms/user.html
+++ b/public/pages/forms/user.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>CareCloud | Dashboard</title>
+        <title>GroupHub | Dashboard</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
         <!-- bootstrap 3.0.2 -->
         <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
         <header class="header">
             <a href="../../index.html" class="logo">
                 <!-- Add the class icon to your logo image or logo icon to add the margining -->
-                CareCloud
+                GroupHub
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top" role="navigation">
@@ -67,7 +67,7 @@
                                                     <img src="../../img/avatar2.png" class="img-circle" alt="user image"/>
                                                 </div>
                                                 <h4>
-                                                    CareCloud Design Team
+                                                    GroupHub Design Team
                                                     <small><i class="fa fa-clock-o"></i> 2 hours</small>
                                                 </h4>
                                                 <p>Why not buy a new awesome theme?</p>
@@ -1067,9 +1067,9 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <!-- Bootstrap -->
         <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
-        <!-- CareCloud App -->
+        <!-- GroupHub App -->
         <script src="../../js/AdminLTE/app.js" type="text/javascript"></script>
-        <!-- CareCloud for demo purposes -->
+        <!-- GroupHub for demo purposes -->
         <script src="js/AdminLTE/demo.js" type="text/javascript"></script>        
     </body>
 </html>
