--- a/public/pages/examples/login.html
+++ b/public/pages/examples/login.html
@@ -22,7 +22,7 @@
 
         <div class="form-box" id="login-box">
             <div class="header">Sign In</div>
-            <form action="../../dashboard.html" method="post">
+            <form action="dashboard" method="post">
                 <div class="body bg-gray">
                     <div class="form-group">
                         <input type="text" name="userid" class="form-control" placeholder="User ID"/>
