--- a/public/register.html
+++ b/public/register.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html class="login">
+<html class="bg-black">
     <head>
         <meta charset="UTF-8">
-        <title>AdminLTE | Log in</title>
+        <title>AdminLTE | Registration Page</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
         <!-- bootstrap 3.0.2 -->
         <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -18,33 +18,36 @@
           <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
     </head>
-    <body class="login">
+    <body class="register">
 
         <div class="form-box" id="login-box">
-            <div class="header">Sign In</div>
-            <form action="" method="post">
+            <div class="header">Register New Membership</div>
+            <form action="../../user.html" method="post">
                 <div class="body bg-gray">
+                    <div class="form-group">
+                        <input type="text" name="name" class="form-control" placeholder="Full name"/>
+                    </div>
                     <div class="form-group">
                         <input type="text" name="userid" class="form-control" placeholder="User ID"/>
                     </div>
                     <div class="form-group">
                         <input type="password" name="password" class="form-control" placeholder="Password"/>
-                    </div>          
+                    </div>
                     <div class="form-group">
-                        <input type="checkbox" name="remember_me"/> Remember me
+                        <input type="password" name="password2" class="form-control" placeholder="Retype password"/>
                     </div>
                 </div>
-                <div class="footer">                                                               
-                    <a href="/dashboard" type="submit" class="btn bg-olive btn-block">Sign me in</a> 
+                <div class="footer">                    
+
+                <a href="/pages/forms/user" type="submit" class="btn bg-olive btn-block">Sign me up</a> 
                     
-                    <p><a href="#">I forgot my password</a></p>
-                    
-                    <a href="register.html" class="text-center">Register a new membership</a>
+
+                    <a href="login.html" class="text-center">I already have a membership</a>
                 </div>
             </form>
 
             <div class="margin text-center">
-                <span>Sign in using social networks</span>
+                <span>Register using social networks</span>
                 <br/>
                 <button class="btn bg-light-blue btn-circle"><i class="fa fa-facebook"></i></button>
                 <button class="btn bg-aqua btn-circle"><i class="fa fa-twitter"></i></button>
@@ -57,7 +60,7 @@
         <!-- jQuery 2.0.2 -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <!-- Bootstrap -->
-        <script src="../../js/bootstrap.min.js" type="text/javascript"></script>        
+        <script src="../../js/bootstrap.min.js" type="text/javascript"></script>
 
     </body>
 </html>
