addition of beterdoctor to helm allscripts hellow world and pokitdoc integration into the register

--- a/public/helm.html
+++ b/public/helm.html
@@ -542,53 +542,10 @@
 
                                     <h3 class="box-title">Enrollment Goals</h3>
                                 </div><!-- /.box-header -->
-                                <div class="box-body no-padding">
-                                    <div class="row">
-                                        <div class="col-sm-7">
-                                            <!-- bar chart -->
-                                            <div class="chart" id="bar-chart" style="height: 250px;"></div>
-                                        </div>
-                                        <div class="col-sm-5">
-                                            <div class="pad">
-                                                <!-- Progress bars -->
-                                                <div class="clearfix">
-                                                    <span class="pull-left">Leads</span>
-                                                    <small class="pull-right">750/1000</small>
-                                                </div>
-                                                <div class="progress xs">
-                                                    <div class="progress-bar progress-bar-green" style="width: 75%;"></div>
-                                                </div>
-
-                                                <div class="clearfix">
-                                                    <span class="pull-left">Plan Selections</span>
-                                                    <small class="pull-right">200/500</small>
-                                                </div>
-                                                <div class="progress xs">
-                                                    <div class="progress-bar progress-bar-red" style="width: 40%;"></div>
-                                                </div>
-
-                                                <div class="clearfix">
-                                                    <span class="pull-left">Submissions</span>
-                                                    <small class="pull-right">160/200</small>
-                                                </div>
-                                                <div class="progress xs">
-                                                    <div class="progress-bar progress-bar-light-blue" style="width: 80%;"></div>
-                                                </div>
-
-                                                <div class="clearfix">
-                                                    <span class="pull-left">Enrollments</span>
-                                                    <small class="pull-right">75/100</small>
-                                                </div>
-                                                <div class="progress xs">
-                                                    <div class="progress-bar progress-bar-aqua" style="width: 75%;"></div>
-                                                </div>
-                                                <!-- Buttons -->
-                                                <p>
-                                                    <button class="btn btn-default btn-sm"><i class="fa fa-cloud-download"></i> Generate PDF</button>
-                                                </p>
-                                            </div><!-- /.pad -->
-                                        </div><!-- /.col -->
-                                    </div><!-- /.row - inside box -->
+                                <div class="box-body" height="100px">
+                                
+                                         <iframe src="betterdoctor.html" frameborder="0" height="200px" width="100%"></iframe>
+                            
                                 </div><!-- /.box-body -->
                                 <div class="box-footer">
                                     <div class="row">
