--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             </div><!-- /.headline -->
             
             <!-- User name -->
-            <div class="lockscreen-name">Jane Doe</div>
+            <div class="lockscreen-name">John Doe</div>
             
             <!-- START LOCK SCREEN ITEM -->
             <div class="lockscreen-item">
@@ -47,11 +47,11 @@
 
                 <!-- lockscreen credentials (contains the form) -->
                 <div class="lockscreen-credentials">   
-                    <form action="" method="post">
+                    <form action="/dashboard" method="get">
                     <div class="input-group">
                         <input type="password" class="form-control" placeholder="password" />
                         <div class="input-group-btn" >
-                            <a href="/dashboard" type="button" class="btn btn-flat"></a><i class="fa fa-arrow-right text-muted"></i></button>
+                            <a href="/dashboard" type="button" class="btn"></a><i class="fa fa-arrow-right text-muted"></i></button>
 
                         </div>
                     </div>
