--- a/public/register.html
+++ b/public/register.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="footer">                    
 
-                <a href="/pages/forms/user" type="submit" class="btn bg-olive btn-block">Sign me up</a> 
+                <a href="user.html" type="submit" class="btn bg-olive btn-block">Sign me up</a> 
                     
 
                     <a href="login.html" class="text-center">I already have a membership</a>
