--- a/public/helm.html
+++ b/public/helm.html
@@ -316,7 +316,7 @@
                     <!-- sidebar menu: : style can be found in sidebar.less -->
                     <ul class="sidebar-menu">
                         <li class="active">
-                            <a href="index.html">
+                            <<a href="dashboard.html">
                                 <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                             </a>
                         </li>
@@ -362,7 +362,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="pages/register.html">
+                            <a href="registrations">
                                 <i class="fa fa-heart"></i> <span>Register</span>
                                 <small class="badge pull-right bg-yellow">12</small>
                             </a>
