--- a/public/login.html
+++ b/public/login.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="footer">                                                               
-                    <a href="/dashboard" type="submit" class="btn bg-olive btn-block">Sign me in</a> 
+                    <a href="/manager_dashboard" type="submit" class="btn bg-olive btn-block">Sign me in</a> 
                     
                     <p><a href="#">I forgot my password</a></p>
                     
